# pharm_api

./: Makefile  README.md  main.py  pyproject.toml
core/: auth.py  database.py  meds.py
models/: auth.py  cart.py
routers/: auth.py  cart.py
tests/: abc.py  meds.py  ok.py
